fixing sidebar visible below short content

--- a/kifi-backend/modules/shoebox/angular-black/src/app.styl
+++ b/kifi-backend/modules/shoebox/angular-black/src/app.styl
@@ -72,11 +72,15 @@ a[href]
   zoom: 1
 
 .kf-cols
+  position: absolute
+  top: 0
+  left: 0
   min-width: 100%
-  height: 100%
+  min-height: 100%
   overflow: hidden
   text-align: left
   text-align: start
+  background-color: appBackgroundColor
 
 .kf-col
   display: inline-block
