--- a/kifi-backend/modules/shoebox/angular-black/src/layout/scrollablePane/scrollablePane.styl
+++ b/kifi-backend/modules/shoebox/angular-black/src/layout/scrollablePane/scrollablePane.styl
@@ -1,5 +1,6 @@
 .kf-scrollable-pane
   width: calc(100% - 270px)
+  min-height: 100%
   padding-left: 270px
   background-color: appBackgroundColor
 
